zapped old develop branch and starting fresh

--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -29,6 +29,9 @@
                     {{authentication.user.displayName}} <b class="caret"></b>
                 </a>
 				<ul class="dropdown-menu">
+                    <li>
+                        <a href="#!/users/:{{authentication.user._id}}/edit">View/Edit Profile</a>
+                    </li>
 					<li>
 						<a href="/auth/signout">Signout</a>
 					</li>
