--- a/public/modules/users/views/edit.html
+++ b/public/modules/users/views/edit.html
@@ -2,15 +2,28 @@
     <div class="page-header">
         <h1>Edit Article</h1>
     </div>
-    <div class="col-md-12">
+    <div class="col-sm-12">
         <form class="form-horizontal" data-ng-submit="update()">
             <fieldset>
-                <div class="form-group">
-                    <label class="control-label" for="title">Title</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="user.title" id="title" class="form-control" placeholder="Title" required>
+                <div class="col-sm-12">
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="firstName">First Name</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.title" id="firstName" class="form-control" placeholder="{{user.firstName}}" required>
+                        </div>
                     </div>
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="lastName">Last Name</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.title" id="lastName" class="form-control" placeholder="{{user.lastName}}" required>
+                        </div>
+                    </div>
+
                 </div>
+
+
                 <div class="form-group">
                     <label class="control-label" for="content">Content</label>
                     <div class="controls">
