--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -30,7 +30,7 @@
                 </a>
 				<ul class="dropdown-menu">
                     <li>
-                        <a href="#!/users/:{{authentication.user._id}}/edit">View/Edit Profile</a>
+                        <a href="#!/users/{{authentication.user._id}}/edit">View/Edit Profile</a>
                     </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
