success stuff. i can update compannies

--- a/public/modules/users/views/edit.html
+++ b/public/modules/users/views/edit.html
@@ -10,14 +10,75 @@
                     <div class="col-sm-6">
                         <label class="control-label" for="firstName">First Name</label>
                         <div class="controls">
-                            <input type="text" data-ng-model="user.title" id="firstName" class="form-control" placeholder="{{user.firstName}}" required>
+                            <input type="text" data-ng-model="user.firstName" id="firstName" class="form-control" placeholder="{{user.firstName}}" required>
                         </div>
                     </div>
 
                     <div class="col-sm-6">
                         <label class="control-label" for="lastName">Last Name</label>
                         <div class="controls">
-                            <input type="text" data-ng-model="user.title" id="lastName" class="form-control" placeholder="{{user.lastName}}" required>
+                            <input type="text" data-ng-model="user.lastName" id="lastName" class="form-control" placeholder="{{user.lastName}}" required>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12">
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="phoneNumber">Phone Number</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.phoneNumber" id="phoneNumber" class="form-control" placeholder="{{user.phoneNumber}}" required>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="businessName">Business Name</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.businessName" id="businessName" class="form-control" placeholder="{{user.businessName}}" required>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12">
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="streetAddress">Street Address</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.streetAddress" id="streetAddress" class="form-control" placeholder="{{user.streetAddress}}" required>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <label class="control-label" for="unitNumber">Apt / Unit</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.unitNumber" id="unitNumber" class="form-control" placeholder="{{user.unitNumber}}" required>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-12">
+
+                    <div class="col-sm-4">
+                        <label class="control-label" for="city">City</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.city" id="city" class="form-control" placeholder="{{user.city}}" required>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <label class="control-label" for="state">State / Province</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.state" id="state" class="form-control" placeholder="{{user.state}}" required>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <label class="control-label" for="zip">Zip / Postal Code</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="user.zip" id="zip" class="form-control" placeholder="{{user.zip}}" required>
                         </div>
                     </div>
 
