--- a/public/modules/users/views/edit.html
+++ b/public/modules/users/views/edit.html
@@ -5,6 +5,7 @@
     <div class="col-sm-12">
         <form class="form-horizontal" data-ng-submit="update()">
             <fieldset>
+                <!-- First Name and Last Name -->
                 <div class="form-group">
 
                     <div class="col-sm-6">
@@ -23,6 +24,7 @@
 
                 </div>
 
+                <!-- Phone Number -->
                 <div class="form-group">
 
                     <div class="col-sm-6">
@@ -32,15 +34,9 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-6">
-                        <label class="control-label" for="businessName">Business Name</label>
-                        <div class="controls">
-                            <input type="text" data-ng-model="user.businessName" id="businessName" class="form-control" placeholder="{{user.businessName}}" required>
-                        </div>
-                    </div>
-
                 </div>
 
+                <!-- Street Address and Apt / Unit -->
                 <div class="form-group">
 
                     <div class="col-sm-6">
@@ -59,6 +55,7 @@
 
                 </div>
 
+                <!-- City and State -->
                 <div class="form-group">
 
                     <div class="col-sm-4">
@@ -84,15 +81,16 @@
 
                 </div>
 
-                <div class="form-group">
+                <!-- are you a property owner? -->
+                <div class="form-group" ng-init="scope = { isDisabled: true }">
                     <div class="col-sm-6">
-                        <label class="control-label" for="property">Are you a property owner?</label>
-                        <p>If you are a property owner who rents properties and wishes to manage their property on this site then select the radio button and input your property name. <span>This can not be undone.</span></span></p>
+                        <label class="control-label" for="businessName">Are you a property owner?</label>
+                        <p>If you are a property owner who rents properties and wishes to manage their property on this site then select the radio button and input your property name. <span>This can not be undone.</span></p>
                         <div class="input-group">
                           <span class="input-group-addon">
-                            <input type="radio" name="propertyYes" value="yes">
+                            <input data-ng-model="checked" type="checkbox" name="propertyYes" value="yes" data-ng-disabled="user.checked">
                           </span>
-                            <input type="text" data-ng-model="user.property" id="property" class="form-control" placeholder="{{user.property}}">
+                            <input data-ng-disabled="!checked" type="text" data-ng-model="user.businessName" id="businessName" class="form-control" placeholder="{{user.businessName}}">
                         </div><!-- /input-group -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
