--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -35,6 +35,9 @@
                     <li data-ng-controller="PropertiesController" data-ng-init="findPropertyByUser()" data-ng-show="hasProperty">
                         <a href="#!/users/properties">Manage Properties</a>
                     </li>
+                    <li data-ng-init="findOne()" data-ng-show="user.propertyYes">
+                        <a href="">Property Editor</a>
+                    </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
 					</li>
