--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -32,6 +32,9 @@
                     <li>
                         <a href="#!/users/{{authentication.user._id}}/edit">View/Edit Profile</a>
                     </li>
+                    <li data-ng-init="findOne()" data-ng-show="user.propertyYes">
+                        <a href="">Property Editor</a>
+                    </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
 					</li>
