added menu item

--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -33,7 +33,7 @@
                         <a href="#!/users/{{authentication.user._id}}/edit">View/Edit Profile</a>
                     </li>
                     <li data-ng-init="findOne()" data-ng-show="user.propertyYes">
-                        <a href="">Property Editor</a>
+                        <a href="#!/property/{{authentication.user._id}}">Property Editor</a>
                     </li>
 					<li>
 						<a href="/auth/signout">Signout</a>
