--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -36,7 +36,7 @@
                         <a href="#!/users/properties">Manage Properties</a>
                     </li>
                     <li data-ng-init="findOne()" data-ng-show="user.propertyYes">
-                        <a href="">Property Editor</a>
+                        <a href="#!/property/{{authentication.user._id}}">Property Editor</a>
                     </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
