--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -32,8 +32,8 @@
                     <li>
                         <a href="#!/users/{{authentication.user._id}}/edit">View/Edit Profile</a>
                     </li>
-                    <li data-ng-init="findOne()" data-ng-show="user.propertyYes">
-                        <a href="#!/property/{{authentication.user._id}}">Property Editor</a>
+                    <li data-ng-show="authentication.user.propertyYes">
+                        <a href="#!/user/property">Manage Properties</a>
                     </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
