fixed merge conflict

--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -36,6 +36,13 @@
                         <a href="#!/user/property">Manage Properties</a>
                     </li>
 					<li>
+						<a href="/#!/settings/profile">Edit Profile</a>
+					</li>
+					<li data-ng-show="authentication.user.provider === 'local'">
+						<a href="/#!/settings/password">Change Password</a>
+					</li>
+					<li class="divider"></li>
+					<li>
 						<a href="/auth/signout">Signout</a>
 					</li>
 				</ul>
