--- a/public/modules/users/views/settings/profile.html
+++ b/public/modules/users/views/settings/profile.html
@@ -1,26 +1,103 @@
 <section class="row" data-ng-controller="SettingsController">
 	<h3 class="col-md-12 text-center">Edit your profile</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+
+	<div class="col-sm-12">
 		<form data-ng-submit="updateUserProfile()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
+				<!-- First Name and Last Name -->
 				<div class="form-group">
-					<label for="firstName">First Name</label>
-					<input type="text" id="firstName" name="firstName" class="form-control" data-ng-model="user.firstName" placeholder="First Name">
+
+					<div class="col-sm-6">
+						<label class="control-label" for="firstName">First Name</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.firstName" id="firstName" class="form-control" placeholder="{{user.firstName}}" required>
+						</div>
+					</div>
+
+					<div class="col-sm-6">
+						<label class="control-label" for="lastName">Last Name</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.lastName" id="lastName" class="form-control" placeholder="{{user.lastName}}" required>
+						</div>
+					</div>
+
 				</div>
+
+				<!-- Phone Number -->
 				<div class="form-group">
-					<label for="lastName">Last Name</label>
-					<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="user.lastName" placeholder="Last Name">
+
+					<div class="col-sm-6">
+						<label class="control-label" for="phoneNumber">Phone Number</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.phoneNumber" id="phoneNumber" class="form-control" placeholder="{{user.phoneNumber}}" required>
+						</div>
+					</div>
+
 				</div>
+
+				<!-- Street Address and Apt / Unit -->
 				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="text" id="email" name="email" class="form-control" data-ng-model="user.email" placeholder="Email">
+
+					<div class="col-sm-6">
+						<label class="control-label" for="streetAddress">Street Address</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.streetAddress" id="streetAddress" class="form-control" placeholder="{{user.streetAddress}}" required>
+						</div>
+					</div>
+
+					<div class="col-sm-6">
+						<label class="control-label" for="unitNumber">Apt / Unit</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.unitNumber" id="unitNumber" class="form-control" placeholder="{{user.unitNumber}}" required>
+						</div>
+					</div>
+
 				</div>
+
+				<!-- City and State -->
 				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
+
+					<div class="col-sm-4">
+						<label class="control-label" for="city">City</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.city" id="city" class="form-control" placeholder="{{user.city}}" required>
+						</div>
+					</div>
+
+					<div class="col-sm-4">
+						<label class="control-label" for="state">State / Province</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.state" id="state" class="form-control" placeholder="{{user.state}}" required>
+						</div>
+					</div>
+
+					<div class="col-sm-4">
+						<label class="control-label" for="zip">Zip / Postal Code</label>
+						<div class="controls">
+							<input type="text" data-ng-model="user.zip" id="zip" class="form-control" placeholder="{{user.zip}}" required>
+						</div>
+					</div>
+
 				</div>
-				<div class="text-center form-group">
-					<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
+
+				<!-- are you a property owner? -->
+				<div class="form-group" ng-init="scope = { isDisabled: true }">
+					<div class="col-sm-6">
+						<label class="control-label" for="businessName">Are you a property owner?</label>
+						<p>If you are a property owner who rents properties and wishes to manage their property on this site then select the radio button and input your property name. <span>This can not be undone.</span></p>
+						<div class="input-group">
+                          <span class="input-group-addon">
+                            <input data-ng-disabled="!user.isBusiness" data-ng-model="user.propertyYes" type="checkbox" name="propertyYes" value="yes">
+                          </span>
+							<input type="text" data-ng-model="user.businessName" id="businessName" class="form-control" placeholder="{{user.businessName}}">
+						</div><!-- /input-group -->
+					</div><!-- /.col-lg-6 -->
+				</div><!-- /.row -->
+
+				<div class="form-group">
+					<div class="col-sm-12">
+						<input type="submit" value="Update" class="btn btn-default">
+					</div>
 				</div>
 				<div data-ng-show="success" class="text-center text-success">
 					<strong>Profile Saved Successfully</strong>
