--- a/public/modules/properties/views/edit.html
+++ b/public/modules/properties/views/edit.html
@@ -1,98 +1,10 @@
 <section class="row" data-ng-controller="SettingsController">
-	<h3 class="col-md-12 text-center">Edit your profile</h3>
+	<h3 class="col-md-12 text-center">Edit your Property</h3>
 
 	<div class="col-sm-12">
-		<form data-ng-submit="updateUserProfile()" class="signin form-horizontal" autocomplete="off">
+		<form data-ng-submit="updateProperty()" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
-				<!-- First Name and Last Name -->
-				<div class="form-group">
 
-					<div class="col-sm-6">
-						<label class="control-label" for="firstName">First Name</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.firstName" id="firstName" class="form-control" placeholder="{{user.firstName}}" required>
-						</div>
-					</div>
-
-					<div class="col-sm-6">
-						<label class="control-label" for="lastName">Last Name</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.lastName" id="lastName" class="form-control" placeholder="{{user.lastName}}" required>
-						</div>
-					</div>
-
-				</div>
-
-				<!-- Phone Number -->
-				<div class="form-group">
-
-					<div class="col-sm-6">
-						<label class="control-label" for="phoneNumber">Phone Number</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.phoneNumber" id="phoneNumber" class="form-control" placeholder="{{user.phoneNumber}}" required>
-						</div>
-					</div>
-
-				</div>
-
-				<!-- Street Address and Apt / Unit -->
-				<div class="form-group">
-
-					<div class="col-sm-6">
-						<label class="control-label" for="streetAddress">Street Address</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.streetAddress" id="streetAddress" class="form-control" placeholder="{{user.streetAddress}}" required>
-						</div>
-					</div>
-
-					<div class="col-sm-6">
-						<label class="control-label" for="unitNumber">Apt / Unit</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.unitNumber" id="unitNumber" class="form-control" placeholder="{{user.unitNumber}}" required>
-						</div>
-					</div>
-
-				</div>
-
-				<!-- City and State -->
-				<div class="form-group">
-
-					<div class="col-sm-4">
-						<label class="control-label" for="city">City</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.city" id="city" class="form-control" placeholder="{{user.city}}" required>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<label class="control-label" for="state">State / Province</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.state" id="state" class="form-control" placeholder="{{user.state}}" required>
-						</div>
-					</div>
-
-					<div class="col-sm-4">
-						<label class="control-label" for="zip">Zip / Postal Code</label>
-						<div class="controls">
-							<input type="text" data-ng-model="user.zip" id="zip" class="form-control" placeholder="{{user.zip}}" required>
-						</div>
-					</div>
-
-				</div>
-
-				<!-- are you a property owner? -->
-				<div class="form-group" ng-init="scope = { isDisabled: true }">
-					<div class="col-sm-6">
-						<label class="control-label" for="businessName">Are you a property owner?</label>
-						<p>If you are a property owner who rents properties and wishes to manage their property on this site then select the radio button and input your property name. <span>This can not be undone.</span></p>
-						<div class="input-group">
-                          <span class="input-group-addon">
-                            <input data-ng-disabled="!user.isBusiness" data-ng-model="user.propertyYes" type="checkbox" name="propertyYes" value="yes">
-                          </span>
-							<input type="text" data-ng-model="user.businessName" id="businessName" class="form-control" placeholder="{{user.businessName}}">
-						</div><!-- /input-group -->
-					</div><!-- /.col-lg-6 -->
-				</div><!-- /.row -->
 
 				<div class="form-group">
 					<div class="col-sm-12">
