working on properties

--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -30,10 +30,10 @@
                 </a>
 				<ul class="dropdown-menu">
                     <li>
-                        <a href="/#!/property/create">Create Property</a>
+                        <a href="/#!/properties/create">Create Property</a>
                     </li>
                     <li data-ng-show="authentication.user.propertyYes">
-                        <a href="#!/property">Manage Properties</a>
+                        <a href="#!/properties">Manage Properties</a>
                     </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
