--- a/public/modules/properties/views/create.html
+++ b/public/modules/properties/views/create.html
@@ -1,14 +1,14 @@
-<section data-ng-controller="ArticlesController">
+<section data-ng-controller="PropertiesController">
     <div class="page-header">
-        <h1>New Article</h1>
+        <h1>New Property</h1>
     </div>
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()">
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="title">Title</label>
+                    <label class="control-label" for="businessName">Business Name</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="title" id="title" class="form-control" placeholder="Title" required>
+                        <input type="text" data-ng-model="businessName" id="businessName" class="form-control" placeholder="Business Name" required>
                     </div>
                 </div>
                 <div class="form-group">
