--- a/public/modules/properties/views/view.html
+++ b/public/modules/properties/views/view.html
@@ -1,10 +1,10 @@
-<section data-ng-controller="ArticlesController" data-ng-init="findOne()">
+<section data-ng-controller="PropertiesController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1>{{article.title}}</h1>
+		<h1>{{property.businessName}}</h1>
 	</div>
 
-	<div class="pull-right" data-ng-show="authentication.user._id == article.user._id">
-		<a class="btn btn-primary" href="/#!/articles/{{article._id}}/edit">
+	<div class="pull-right" data-ng-show="authentication.user._id == property.user._id">
+		<a class="btn btn-primary" href="/#!/properties/{{property._id}}/edit">
 			<i class="glyphicon glyphicon-edit"></i>
 		</a>
 		<a class="btn btn-primary" data-ng-click="remove();">
@@ -12,9 +12,9 @@
 		</a>
 	</div>
 	<small>
-		<em class="text-muted">Posted on {{article.created | date:'mediumDate'}} by {{article.user.displayName}}</em>
+		<em class="text-muted">Posted on {{property.created | date:'mediumDate'}} by {{property.user.displayName}}</em>
 	</small>
 	<p class="lead">
-		{{article.content}}
+		{{property.content}}
 	</p>
 </section>
