--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -36,6 +36,7 @@
                         <a href="#!/properties">Manage Properties TEMP</a>
                     </li>
                     <section data-ng-controller="PropertiesController" data-ng-init="findPropertyByUser()">
+	                    {{authentication.user._id}}
                         <li data-ng-show="hasProperty">
                             <a href="#!/properties">Manage Properties</a>
                         </li>
