--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -32,16 +32,9 @@
                     <li>
                         <a href="/#!/properties/create">Create Property</a>
                     </li>
-                    <li>
-                        <a href="#!/properties">Manage Properties TEMP</a>
+                    <li data-ng-controller="PropertiesController" data-ng-init="findPropertyByUser()" data-ng-show="hasProperty">
+                        <a href="#!/properties">Manage Properties</a>
                     </li>
-					<p>{{findProperty}}</p>
-                    <section data-ng-controller="PropertiesController" data-ng-init="findPropertyByUser()">
-	                    <p>{{findPropertyByUser}}</p>
-                        <li data-ng-show="hasProperty">
-                            <a href="#!/properties">Manage Properties</a>
-                        </li>
-                    </section>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
 					</li>
