--- a/public/modules/properties/views/create.html
+++ b/public/modules/properties/views/create.html
@@ -5,12 +5,43 @@
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()">
             <fieldset>
-                <div class="form-group">
-                    <label class="control-label" for="businessName">Business Name</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="businessName" id="businessName" class="form-control" placeholder="Business Name" required>
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="control-label" for="businessName">Business Name</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="businessName" id="businessName" class="form-control" placeholder="Business Name" required>
+                        </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="control-label" for="streetAddress">Street Address</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="streetAddress" id="streetAddress" class="form-control" placeholder="Street Address">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="city">City</label>
+                            <input type="text" data-ng-model="city" id="city" class="form-control" placeholder="City">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="state">State</label>
+                            <input type="text" data-ng-model="state" id="state" class="form-control" placeholder="State">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="zip">Zip</label>
+                            <input type="text" data-ng-model="zip" id="zip" class="form-control" placeholder="Zip">
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label class="control-label" for="content">Content</label>
                     <div class="controls">
