--- a/public/modules/properties/views/create.html
+++ b/public/modules/properties/views/create.html
@@ -5,6 +5,7 @@
     <div class="col-md-12">
         <form class="form-horizontal" data-ng-submit="create()">
             <fieldset>
+                <!-- Business Name -->
                 <div class="row">
                     <div class="form-group col-md-12">
                         <label class="control-label" for="businessName">Business Name</label>
@@ -13,6 +14,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Street Address -->
                 <div class="row">
                     <div class="form-group col-md-12">
                         <label class="control-label" for="streetAddress">Street Address</label>
@@ -22,22 +24,42 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- City -->
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="control-label" for="city">City</label>
                             <input type="text" data-ng-model="city" id="city" class="form-control" placeholder="City">
                         </div>
                     </div>
+                    <!-- State -->
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="control-label" for="state">State</label>
                             <input type="text" data-ng-model="state" id="state" class="form-control" placeholder="State">
                         </div>
                     </div>
+                    <!-- Zip -->
                     <div class="col-md-4">
                         <div class="form-group">
                             <label class="control-label" for="zip">Zip</label>
                             <input type="text" data-ng-model="zip" id="zip" class="form-control" placeholder="Zip">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- MDU Checkbox -->
+                    <div class="col-md-3">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox">Is this a Multi Dwelling Unit (MDU) - <em>for example apartment building</em>?
+                            </label>
+                        </div>
+                    </div>
+                    <!-- # of Units -->
+                    <div class="col-md-8">
+                        <div class="form-group">
+                            <label class="control-label" for="units"># of Units</label>
+                            <input type="text" data-ng-model="units" id="units" class="form-control" placeholder="# of Units">
                         </div>
                     </div>
                 </div>
