working on tickets on properties

--- a/public/modules/properties/views/create.html
+++ b/public/modules/properties/views/create.html
@@ -51,7 +51,7 @@
                     <div class="col-md-3">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox">Is this a Multi Dwelling Unit (MDU) - <em>for example apartment building</em>?
+                                <input data-ng-model="mdu" type="checkbox">Is this a Multi Dwelling Unit (MDU) - <em>for example apartment building</em>?
                             </label>
                         </div>
                     </div>
