--- a/public/modules/properties/views/edit.html
+++ b/public/modules/properties/views/edit.html
@@ -11,6 +11,55 @@
                         <input type="text" data-ng-model="property.businessName" id="businessName" class="form-control" placeholder="Business Name" required>
                     </div>
                 </div>
+                <!-- Street Address -->
+                <div class="row">
+                    <div class="form-group col-md-12">
+                        <label class="control-label" for="streetAddress">Street Address</label>
+                        <div class="controls">
+                            <input type="text" data-ng-model="property.streetAddress" id="streetAddress" class="form-control" placeholder="Street Address">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- City -->
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="city">City</label>
+                            <input type="text" data-ng-model="property.city" id="city" class="form-control" placeholder="City">
+                        </div>
+                    </div>
+                    <!-- State -->
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="state">State</label>
+                            <input type="text" data-ng-model="property.state" id="state" class="form-control" placeholder="State">
+                        </div>
+                    </div>
+                    <!-- Zip -->
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label class="control-label" for="zip">Zip</label>
+                            <input type="text" data-ng-model="property.zip" id="zip" class="form-control" placeholder="Zip">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- MDU Checkbox -->
+                    <div class="col-md-3">
+                        <div class="checkbox">
+                            <label>
+                                <input data-ng-model="property.mdu" type="checkbox">Is this a Multi Dwelling Unit (MDU) - <em>for example apartment building</em>?
+                            </label>
+                        </div>
+                    </div>
+                    <!-- # of Units -->
+                    <div class="col-md-8">
+                        <div class="form-group">
+                            <label class="control-label" for="units"># of Units</label>
+                            <input type="text" data-ng-model="units" id="units" class="form-control" placeholder="# of Units">
+                        </div>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="control-label" for="content">Content</label>
                     <div class="controls">
