worked on routes, tickets.

--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -30,10 +30,10 @@
                 </a>
 				<ul class="dropdown-menu">
                     <li>
-                        <a href="/#!/properties/create">Create Property</a>
+                        <a href="/#!/users/properties/create">Create Property</a>
                     </li>
                     <li data-ng-controller="PropertiesController" data-ng-init="findPropertyByUser()" data-ng-show="hasProperty">
-                        <a href="#!/properties">Manage Properties</a>
+                        <a href="#!/users/properties">Manage Properties</a>
                     </li>
 					<li>
 						<a href="/#!/settings/profile">Edit Profile</a>
