cleaned up page

--- a/public/modules/users/views/properties/view.html
+++ b/public/modules/users/views/properties/view.html
@@ -35,7 +35,7 @@
 
                 </div>
 
-                <div class="">
+                <div class="col-md-4">
                     {{ticket.ticketName}}
                     <p>{{ticket.ticketDescription}}</p>
                 </div>
