--- a/public/modules/properties/views/view.html
+++ b/public/modules/properties/views/view.html
@@ -24,8 +24,12 @@
     </div>
     <div class="row">
         <ul>
-            <li data-ng-repeat="ticket in property.tickets">
-                <div class="pull-right" data-ng-show="authentication.user._id == property.user._id">
+            <li class="list-group-item clearfix" data-ng-repeat="ticket in property.tickets">
+                <div class="col-md-4">
+                    {{ticket.ticketName}}
+                    <p>{{ticket.ticketDescription}}</p>
+                </div>
+                <div class="col-md-8" data-ng-show="authentication.user._id == property.user._id">
                     <a class="btn btn-primary" href="/#!/properties/{{property._id}}/edit">
                         <i class="glyphicon glyphicon-edit"></i>
                     </a>
@@ -34,11 +38,6 @@
                     </a>
 
                 </div>
-
-                <div class="">
-                    {{ticket.ticketName}}
-                    <p>{{ticket.ticketDescription}}</p>
-                </div>
             </li>
         </ul>
     </div>
@@ -46,33 +45,25 @@
         <form class="form-horizontal" data-ng-submit="addTicket(property,ticket)">
             <fieldset>
                 <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label" for="name">Name</label>
+                    <div class="input-group">
+                        <span class="input-group-addon">Name</span>
                         <input type="text" data-ng-model="ticket.ticketName" id="name" class="form-control" placeholder="Name">
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="form-group">
-                        <label class="control-label" for="description">Description</label>
+                    <div class="input-group">
+                        <span class="input-group-addon">Description</span>
                         <input type="text" data-ng-model="ticket.ticketDescription" id="description" class="form-control" placeholder="Description">
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="form-group">
-                        <input type="submit" value="Update" class="btn btn-default">
+                    <div class="btn-group">
+                        <button type="submit" class="btn btn-default">Submit Ticket</button>
                     </div>
                 </div>
             </fieldset>
         </form>
     </div>
-	<div class="pull-right" data-ng-show="authentication.user._id == property.user._id">
-		<a class="btn btn-primary" href="/#!/properties/{{property._id}}/edit">
-			<i class="glyphicon glyphicon-edit"></i>
-		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
-			<i class="glyphicon glyphicon-trash"></i>
-		</a>
-	</div>
 
 	<p class="lead">
 		{{property.content}}
