--- a/public/modules/users/views/properties/list.html
+++ b/public/modules/users/views/properties/list.html
@@ -4,13 +4,13 @@
     </div>
 
     <div class="list-group">
-        <p>Count: {{$scope.hasTickets()}}</p>
+        <p>There's <strong>{{hasTickets()}}</strong> Tickets currently open.</p>
 
         <a data-ng-repeat="property in properties | filter:{userID:authentication.user._id}" data-ng-href="#!/users/properties/{{property._id}}/edit" class="list-group-item">
             <small class="list-group-item-text">{{property.created | date:'medium'}} / {{property.user.displayName}} / {{property.userID}}</small>
             <h4 class="list-group-item-heading">{{property.businessName}}</h4>
             <p class="list-group-item-text">{{property.content}}</p>
-            <p>Number of visible people: {{property.length}}</p>
+            <p>Number of tickets: {{property.length}}</p>
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!properties || properties.length">
