--- a/public/modules/properties/views/list.html
+++ b/public/modules/properties/views/list.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="PropertiesController" data-ng-init="find()">
     <div class="page-header">
-        <h1>Properties</h1>
+        <h1>{{properties.length}} Properties</h1>
     </div>
     <div class="list-group">
         <a data-ng-repeat="property in properties" data-ng-href="#!/properties/{{property._id}}" class="list-group-item">
@@ -10,6 +10,6 @@
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!properties || properties.length">
-    	No articles yet, why don't you <a href="/#!/properties/create">create one</a>?
+    	No properties, why don't you <a href="/#!/properties/create">create one</a>?
     </div>
 </section>
