added lodash and indented

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -67,6 +67,8 @@
 
 	<!--AngularJS-->
 	<script type="text/javascript" src="/lib/angular/angular.js"></script>
+    <script type="text/javascript" src="/js/lodash.js"></script>
+    <script type="text/javascript" src="/js/angular-lodash.js"></script>
 	<script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
 	<script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 	<script type="text/javascript" src="/lib/angular-animate/angular-animate.js"></script>
