--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -67,8 +67,6 @@
 
 	<!--AngularJS-->
 	<script type="text/javascript" src="/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="/js/lodash.js"></script>
-    <script type="text/javascript" src="/js/angular-lodash.js"></script>
 	<script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
 	<script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 	<script type="text/javascript" src="/lib/angular-animate/angular-animate.js"></script>
@@ -79,6 +77,13 @@
 	<script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-utils/ui-utils.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="/lib/angular-underscore-module/angular-underscore-module.js"></script>
+
+
+    <script type="text/javascript" src="/js/script.min.js"></script>
+
+
+    <script src="//documentcloud.github.io/underscore/underscore-min.js"></script>
 
 
     <script type="text/javascript" src="/js/script.min.js"></script>
