--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -75,13 +75,11 @@
 	<script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-utils/ui-utils.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="/lib/angular-underscore-module/angular-underscore-module.js"></script>
 
 
     <script type="text/javascript" src="/js/script.min.js"></script>
+	<script type="text/javascript" src="/js/lodash.js"></script>
 
-
-    <script src="//documentcloud.github.io/underscore/underscore-min.js"></script>
 
 	<!--AngularJS Application Init-->
 	<script type="text/javascript" src="/js/config.js"></script>
