--- a/public/modules/core/views/header.html
+++ b/public/modules/core/views/header.html
@@ -26,7 +26,7 @@
 		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    {{authentication.user.displayName}} <b class="caret"></b>
+                    <div data-ng-init="userTickets()" id="noti_Container"><span class="noti_bubble">{{hasTickets()}}</span></div>{{authentication.user.displayName}} <b class="caret"></b>
                 </a>
 				<ul class="dropdown-menu">
                     <li>
