--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -15,3 +15,31 @@
 	position: absolute;
 }
 
+    #noti_Container {
+        position:relative;     /* This is crucial for the absolutely positioned element */
+        /* border:1px solid blue; */ /* This is just to show you where the container ends */
+        width: 20px;
+        height: 20px;
+
+        float: left;
+    }
+
+    .noti_bubble {
+        position:absolute;    /* This breaks the div from the normal HTML document. */
+        top: -2px;
+        right: 0px;
+        padding: 0px 0px 0px 2px;
+        background-color:red; /* you could use a background image if you'd like as well */
+        color:white;
+        font-weight:bold;
+        font-size: 9px;
+
+        /* The following is CSS3, but isn't crucial for this technique to work. */
+        /* Keep in mind that if a browser doesn't support CSS3, it's fine! They just won't have rounded borders and won't have a box shadow effect. */
+        /* You can always use a background image to produce the same effect if you want to, and you can use both together so browsers without CSS3 still have the rounded/shadow look. */
+        /*border-radius: 15px;*/
+        box-shadow:1px 1px 1px gray;
+
+        height: 15px;
+        width: 15px;
+    }
