--- a/public/modules/users/css/users.css
+++ b/public/modules/users/css/users.css
@@ -32,3 +32,25 @@
         width: 15px;
     }
 }
+
+.propertyEditor {
+
+}
+
+.propertyEditor.ng-hide-add, .sample-show-hide.ng-hide-remove {
+    -webkit-transition:all linear 0.5s;
+    -moz-transition:all linear 0.5s;
+    -o-transition:all linear 0.5s;
+    transition:all linear 0.5s;
+    display:block!important;
+}
+
+.propertyEditor.ng-hide-add.ng-hide-add-active,
+.propertyEditor.ng-hide-remove {
+    opacity:0;
+}
+
+.propertyEditor.ng-hide-add,
+.propertyEditor.ng-hide-remove.ng-hide-remove-active {
+    opacity:1;
+}
