--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -71,6 +71,8 @@
 	<script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 	<script type="text/javascript" src="/lib/angular-animate/angular-animate.js"></script>
 
+    <!--<script type="text/javascript" src="/lib/angular-underscore-module/angular-underscore-module.js"></script>-->
+
 	<!--Angular UI-->
 	<script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-utils/ui-utils.js"></script>
