--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -88,11 +88,7 @@
 
     <script type="text/javascript" src="/js/script.min.js"></script>
 	<script type="text/javascript" src="/js/lodash.js"></script>
-
-
-
-    <script type="text/javascript" src="/js/script.min.js"></script>
-	<script type="text/javascript" src="/js/lodash.js"></script>
+    <script src="/js/masonry.pkgd.min.js"></script>
 
 
 	<!--AngularJS Application Init-->
