--- a/public/modules/users/views/properties/list.html
+++ b/public/modules/users/views/properties/list.html
@@ -5,7 +5,7 @@
 
     <p>There's <strong>{{hasTickets()}}</strong> Tickets currently open.</p>
 
-    <div class="list-group col-md-12">
+    <div id="properties" class="list-group col-md-12">
         <a data-ng-repeat="property in properties | filter:{userID:authentication.user._id}" data-ng-href="#!/users/properties/{{property._id}}/edit" class="list-group-item col-md-3">
 
             <h4 class="list-group-item-heading">{{property.businessName}}</h4>
