--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -56,6 +56,9 @@
 	</script>
 
 	<!--Application JavaScript Files-->
+
+	<script src="/js/lodash/lodash.js" type="text/javascript"></script>
+
 	{% for jsFile in jsFiles %}<script type="text/javascript" src="{{jsFile}}"></script>
 	{% endfor %} 
 
